# I2C-LCD-AVR

./: .clang-format  CMakeLists.txt  DHT.c  I2C_LCD.c  README.md  main.c
include/: DHT.h  I2C.h  I2C_LCD.h  LCD.h  dht.h  i2c.h  lcd.h
src/: CMakeLists.txt  dht.c  i2c.c  lcd.c  main.c
